<?xml version="1.0"?>
<package format="3">
  <name>known_size_rect_ght_scan</name>
  <version>0.1.0</version>
  <description>Detect a known-size rectangular room using Generalized Hough Transform from sensor_msgs/LaserScan and visualize in RViz.</description>

  <maintainer email="hijimasa@gmail.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

